--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ p {
      color: #fff;
 }
 
-#navbar h1 {
+#navbar .logo {
     float: left;
     padding-top: 20px;
 }
@@ -112,7 +112,7 @@ p {
 }
 
 #home-info {
-    height: 400px;
+    height: 450px;
 }
 
 #home-info .info-img {
@@ -193,7 +193,7 @@ p {
 
 
 #testimonials{
-   height: 600px;
+   height: 100%;
    background: url('./image_resources/test-bg.jpg') no-repeat center center/cover; 
    padding-top: 100px;
 }
@@ -253,6 +253,7 @@ height: 200px;
 
 .l-heading {
     font-size: 40px;
+    line-height: 1.2;
 }
 
  
